# Kaleidoscope

./: CMakeLists.txt  README.md
include/: global.h  lexer.h  parser.h  utils.h
include/AST/: BinaryExprAST.h  CallExprAST.h  ExprAST.h  FunctionAST.h  NumberExprAST.h  PrototypeAST.h  VariableExprAST.h
include/codegen/: ASTVisitor.h  Codegen.h
src/: CMakeLists.txt  codegen.cpp  lexer.cpp  main.cpp  parser.cpp
