cmake_minimum_required(VERSION 3.0)

set(KALEIDOSCOPE_PROJECT_NAME "Kaleidoscope")
set(KALEIDOSCOPE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(KALEIDOSCOPE_SRC_DIR ${KALEIDOSCOPE_ROOT_DIR}/src)
set(KALEIDOSCOPE_INCLUDE_DIR ${KALEIDOSCOPE_ROOT_DIR}/include)

project(${KALEIDOSCOPE_PROJECT_NAME})

add_subdirectory(${KALEIDOSCOPE_SRC_DIR})